Bug 458685 - encode mime functions in nsIMimeConverter fail when scripted; r+sr=neil